1.45
- Fixed log parsing for 'removing combatant' message.
- Encounter detection now uses combatant id.

1.44
- Hide network header while in stream view.
- Fixed issue with FFTools user caching.
- Timer now flashes whiles waiting for encounter to end.
- Updated other views to use healer background color from overview view.

1.43
- Added FFTools intergration. Live parse pages can now be accessed by FFTools account usernames.
- Fixed issue with triggers that are restricted to a specific zone in triggers view.
- Tweaks to encounter end detection.

1.42
- Add locks to database writing to prevent multiple write issues.
- Fixed countdown encounter end trigger.
- Adding healing, damage taken, and deaths to each player in overview view.
- Overview view now counts "was defeated" log messages and grays out combatants who are currently dead.

1.41
- Fixed issue with encounter history being immediately deleted.
- Added ability to have user's opt out of their encounters+logs being saved.
- Added database locking to address issue of multiple writes.

1.40
- Partial rewrite of encounter parsing modules.
- Removed global player stats.
- Fixed colors in log view and stripped out chat messages from log view.

1.39
- Restrict sqlite combatant storage to only store one record per player.
- Created new logging module and update all code to use it.
- Global player stats now only pulls the last 9999 records.

1.38
- Created storage abstraction layer to better handle storing to database + filesystem.
- Other behind the scenes reworkings.
- Increased global stat generation to 6 hours.

1.37
- Added 'Overview' view with raid DPS, boss HP, est time to kill, etc.
- Encounters that are manually restarted mid encounter should no longer count as a clear.
- Added limit break as a combatant to all relevant views.

1.36
- Tweak countdown encounter reset to reset on first message.
- Added boss HP percentage to encounter details bar.
- DPS/HPS values now update in real time.